--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
     "next": "14.2.5",
     "node-cron": "^3.0.3",
