--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
