--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "chmod +x public/yt-dlp && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,7 +17,9 @@
     "next": "14.2.5",
     "node-cron": "^3.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "youtube-dl-exec": "^3.0.7",
+    "yt-dlp-exec": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
