--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ],
   "build": {
     "env": {
       "PYTHON_VERSION": "3.9"
     }
   },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "curl https://pyenv.run | bash && ~/.pyenv/bin/pyenv install 3.9.6 && ~/.pyenv/bin/pyenv global 3.9.6 && npm install"
-      }
-    }
-  ]
+  "hooks": {
+    "build": "curl https://pyenv.run | bash && ~/.pyenv/bin/pyenv install 3.9.6 && ~/.pyenv/bin/pyenv global 3.9.6 && npm install"
+  }
 }
