--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "chmod +x public/yt-dlp && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-dev": "npx vercel dev"
   },
   "author": "Shubham jain",
   "dependencies": {
@@ -17,15 +18,14 @@
     "next": "14.2.5",
     "node-cron": "^3.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "youtube-dl-exec": "^3.0.7",
-    "yt-dlp-exec": "^1.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vercel": "^35.2.1"
   }
 }
