--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
+    { "src": "next.config.js", "use": "@vercel/next" }
   ],
-  "buildCommand": "./install-python.sh && npm install"
+  "routes": [
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
 }
 
